--- a/Assets/style.css
+++ b/Assets/style.css
@@ -3,99 +3,110 @@
     padding: 0;
     font-family:'Courier New', Courier, monospace;
     color:black;
-    background-color: black;
-}   
+    background-color: slategray;
 
-body {
-
-}
-
+    }   
 
 
 header {
     display: flex;
-    position: relative;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    padding: 50px;
-    background-color: white;
-    background: url(./images/headersf.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
+    flex-direction: column;
+    padding: 40px;
 }
 
-header h1 {
-    display: none;
-    font-size: 200%;
-    color: black;
-    background-color: forestgreen;
+h1 {
+    font-size: 350%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 
-header nav {
+nav {
     display: flex;
-    justify-content: flex-end;
-    font-size: 105%;
-    float: right;
+    flex-direction: row;
+    justify-content: center;
+    background-color: transparent;
 }
 
-header nav ul li {
-    display: inline-block;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: none;
-    padding: 3px;
-    font-style: italic;
-    font-weight: bold;
-    overflow: hidden;
-    
-}
 
-a {
-    position: relative;
+nav a {
     text-decoration: none;
-    background-color: black;
-    color: whitesmoke;
-    padding: 4px;
+    background-color: transparent;
+    color: black;
+    padding: 25px;
+    font-size: 120%;
+    font-weight: bold;
+    font-style: italic;
+    margin-top: 20px;
+}
+main {
+    margin: 20px auto 45px auto;
+    max-width: 80%;
 }
 
-.about {
-    font-size: 150%;
-    font-family:'Courier New', Courier, monospace;
-    color: whitesmoke;
-}
-p {
-    color: whitesmoke;
+.section-zones {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+    margin: 5% 0;
+    padding: 5px 1;
+    height: 100px;
+
 }
 
 
+.section-zones h2 {
+    border-right: 4px solid black;
+}
+
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 5px solid black;
+    margin: 1em 0;
+    padding: 0;
+}
+
+section p {
+    display: flex;
+    margin-left: 25px;
+    flex-wrap: wrap;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+
+
+.profilepic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    max-width: 20%;
+    max-height: 20x;
+}
 footer {
-    color: whitesmoke;
+    color: black;
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px;
-    background: grey;
+    height: 63px;
+    background: black;
     text-align: center;
+    text-decoration: underline;
+    font-weight: bold;
+    
 }
 
 footer ul {
-    display: inline-block;
+    display: flex;
     margin-bottom: 14px;
     padding: 13px;
+    justify-content: center;
 }
 
-/*.one {
-    position: relative;
-    top: 0px;
-    left: 0px;
-}
 
-/*.two {
-    position: static;
-    top: 100px;
-    left: 100px;
-    width: 1000px;
-    height: 200px;
-    align
-    
-}
