--- a/Assets/style.css
+++ b/Assets/style.css
@@ -14,6 +14,7 @@ header {
     align-items: center;
     flex-direction: column;
     padding: 40px;
+    border-bottom: 4px solid black;
 }
 
 h1 {
@@ -34,7 +35,7 @@ nav a {
     text-decoration: none;
     background-color: transparent;
     color: black;
-    padding: 25px;
+    margin: 25px;
     font-size: 120%;
     font-weight: bold;
     font-style: italic;
@@ -47,27 +48,33 @@ main {
 
 .section-zones {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: stretch;
-    margin: 5% 0;
-    padding: 5px 1;
-    height: 100px;
+    /* flex-direction: row;
+    flex-wrap: wrap; */
+    /* align-items: stretch; */
+    /* margin: 5% 0;
+    padding: 5px 1; */
+    
 
 }
 
 
 .section-zones h2 {
     border-right: 4px solid black;
+    float: left;
+    font-size: 50px;
+    padding-right: 8px;
+    padding-left: 10px;
+    border-bottom: 4px solid black;
 }
+
 
 
 hr {
     display: block;
     height: 1px;
     border: 0;
-    border-top: 5px solid black;
-    margin: 1em 0;
+    border-top: 5px double black;
+    margin: 3em 0;
     padding: 0;
 }
 
@@ -76,7 +83,7 @@ section p {
     margin-left: 25px;
     flex-wrap: wrap;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
+    font-size: 18px;
 }
 
 
@@ -86,27 +93,27 @@ section p {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    max-width: 20%;
-    max-height: 20x;
+    max-width: 18%;
+    max-height: 18x;
+    float: left;
 }
 footer {
-    color: black;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 63px;
-    background: black;
-    text-align: center;
-    text-decoration: underline;
-    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+
     
 }
 
-footer ul {
-    display: flex;
-    margin-bottom: 14px;
-    padding: 13px;
-    justify-content: center;
+footer h3 {
+    
+
+
+}
+
+ {
+
 }
 
 
