--- a/Assets/style.css
+++ b/Assets/style.css
@@ -23,6 +23,12 @@ h1 {
 
 }
 
+h3 {
+    font-size: 4vw;
+    text-align: center;
+    margin-top: -40px;
+}
+
 nav {
     display: flex;
     flex-direction: row;
@@ -51,8 +57,7 @@ main {
     /* flex-direction: row;
     flex-wrap: wrap; */
     /* align-items: stretch; */
-    /* margin: 5% 0;
-    padding: 5px 1; */
+    margin: 5% 0;
     
 
 }
@@ -61,7 +66,7 @@ main {
 .section-zones h2 {
     border-right: 4px solid black;
     float: left;
-    font-size: 50px;
+    font-size: 4vw;
     padding-right: 8px;
     padding-left: 10px;
     border-bottom: 4px solid black;
@@ -83,37 +88,101 @@ section p {
     margin-left: 25px;
     flex-wrap: wrap;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 18px;
+    font-size: 2vw;
 }
 
 
 
 .profilepic {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
     max-width: 18%;
     max-height: 18x;
     float: left;
 }
+
+
+.Mainproject {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.Mainproject-item {
+    width:35%;
+    height: 120px;
+    flex-basis: calc(50%-1em);
+    border: 5px solid black;
+    object-fit: cover;
+    vertical-align: top;
+    display: flex;
+    align-items: flex-end;
+    margin: 10px;
+    background: left;
+    background-image: url("./images/comingsoon.jpeg");
+    background-size: cover;
+}
+
+.Mainproject-big {
+    min-height: 300px;
+    flex-basis: 79%;
+    background: left;
+    background-image: url("./images/horiseonpg.png");
+    background-size: cover;
+}
+
+.Mainproject div {
+    padding: 8px 10px;
+    
+}
+
+
+
 footer {
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     flex-direction: column;
 
     
 }
 
-footer h3 {
+
+
+footer h4 {
+    display: flex;
+    border-bottom: 4px solid black;
+    margin-bottom: 10px;
+    margin-top: -30px;
     
-
-
 }
 
- {
-
+footer a {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-bottom: 5px;
+    align-items: center;
 }
 
+@media screen and (max-width: 778px) {
+    .Mainproject-big {
+        flex-direction: column;
+        align-items: center;
+    }
 
+    .flexbox-item {
+        width: 80%;
+        height: 200px;
+    }
+
+    .section-zones {
+        display: flex;
+        flex-basis: 50% 20% 0;
+    }
+    
+    section p {
+        font-size: 11px;
+        line-height: 1.1;
+        padding: 10px;
+    }
+}
