--- a/Assets/style.css
+++ b/Assets/style.css
@@ -8,6 +8,7 @@
     }   
 
 
+/* Styling for the header */
 header {
     display: flex;
     justify-content: center;
@@ -16,6 +17,7 @@ header {
     padding: 40px;
     border-bottom: 4px solid black;
 }
+    
 
 h1 {
     font-size: 350%;
@@ -28,7 +30,7 @@ h3 {
     text-align: center;
     margin-top: -40px;
 }
-
+/* set up my nav */
 nav {
     display: flex;
     flex-direction: row;
@@ -36,7 +38,7 @@ nav {
     background-color: transparent;
 }
 
-
+/* anchor tags in the nav */
 nav a {
     text-decoration: none;
     background-color: transparent;
@@ -62,7 +64,7 @@ main {
 
 }
 
-
+/* how i got the about me how it is */
 .section-zones h2 {
     border-right: 4px solid black;
     float: left;
@@ -83,6 +85,7 @@ hr {
     padding: 0;
 }
 
+/* the about me paragraph */
 section p {
     display: flex;
     margin-left: 25px;
@@ -92,7 +95,7 @@ section p {
 }
 
 
-
+/* My picture styling */
 .profilepic {
     display: block;
     max-width: 18%;
@@ -107,6 +110,7 @@ section p {
     justify-content: center;
 }
 
+/* This is where i addressed the coming soon boxes */
 .Mainproject-item {
     width:35%;
     height: 120px;
@@ -122,6 +126,7 @@ section p {
     background-size: cover;
 }
 
+/* My showcase project styling */
 .Mainproject-big {
     min-height: 300px;
     flex-basis: 79%;
@@ -136,7 +141,7 @@ section p {
 }
 
 
-
+/* footer styling */
 footer {
     display: flex;
     justify-content: center;
@@ -164,6 +169,7 @@ footer a {
     align-items: center;
 }
 
+/* attempted to get the media screen working*/
 @media screen and (max-width: 778px) {
     .Mainproject-big {
         flex-direction: column;
